syntax = "proto3";

package appointment;

message BusinessNode {
  string id = 1; 
  string BusinessId = 2;
  string Name = 3;
  string Mobile = 4;
  string Email = 5;
  string DisplayPicture = 6;
  string Address = 7;
  string Longitude = 8;
  string Lattitude = 9;
  int32 OverallRating = 10;
  bool AllowWalkinAppointments = 11;
  string AllowFutureBookingFor = 12;
  bool IsActive = 13;
  }

message BusinessNodeCreateModel {
    string BusinessId = 1;
    string Name = 2;
    string Mobile = 3;
    string Email = 4;
    string DisplayPicture = 5;
    string Address = 6;
    string Longitude = 7;
    string Lattitude = 8;
    int32 OverallRating = 9;
    bool AllowWalkinAppointments = 10;
    string AllowFutureBookingFor = 11;
    bool IsActive = 12;
}

message BusinessNodeGetByIdModel {
    string id = 1; 
}

message BusinessNodeGetByIdResponse {
    string id = 1; 
    string BusinessId = 2;
    string Name = 3;
    string Mobile = 4;
    string Email = 5;
    string DisplayPicture = 6;
    string Address = 7;
    string Longitude = 8;
    string Lattitude = 9;
    int32 OverallRating = 10;
    bool AllowWalkinAppointments = 11;
    string AllowFutureBookingFor = 12;
    bool IsActive = 13; 
}

message BusinessNodeCreateResponse {
    string id = 1; 
    string BusinessId = 2;
    string Name = 3;
    string Mobile = 4;
    string Email = 5;
    string DisplayPicture = 6;
    string Address = 7;
    string Longitude = 8;
    string Lattitude = 9;
    int32 OverallRating = 10;
    bool AllowWalkinAppointments = 11;
    string AllowFutureBookingFor = 12;
    bool IsActive = 13;
}

message BusinessNodeUpdateModel {
    string id = 1; 
    string BusinessId = 2;
    string Name = 3;
    string Mobile = 4;
    string Email = 5;
    string DisplayPicture = 6;
    string Address = 7;
    string Longitude = 8;
    string Lattitude = 9;
    int32 OverallRating = 10;
    bool AllowWalkinAppointments = 11;
    string AllowFutureBookingFor = 12;
    bool IsActive = 13;
  }

message BusinessNodeUpdateResponse {
    string id = 1; 
    string BusinessId = 2;
    string Name = 3;
    string Mobile = 4;
    string Email = 5;
    string DisplayPicture = 6;
    string Address = 7;
    string Longitude = 8;
    string Lattitude = 9;
    int32 OverallRating = 10;
    bool AllowWalkinAppointments = 11;
    string AllowFutureBookingFor = 12;
    bool IsActive = 13;
  }

message BusinessNodeSearchModel {
    string businessId = 1;
    string name = 2;
    bool isActive = 3;
}

message BusinessNodeSearchResponse {
    string id = 1; 
    string BusinessId = 2;
    string Name = 3;
    string Mobile = 4;
    string Email = 5;
    string DisplayPicture = 6;
    string Address = 7;
    string Longitude = 8;
    string Lattitude = 9;
    int32 OverallRating = 10;
    bool AllowWalkinAppointments = 11;
    string AllowFutureBookingFor = 12;
    bool IsActive = 13;
}

message BusinessNodeDeleteModel {
    string id = 1;
}

  message BusinessNodeDeleteResponse {
    string id = 1;
}


service BusinessNodes {
    rpc Create(BusinessNodeCreateModel) returns (BusinessNodeCreateResponse);
    rpc GetById(BusinessNodeGetByIdModel) returns (BusinessNodeGetByIdResponse) {};
    rpc Search(BusinessNodeSearchModel) returns (BusinessNodeSearchResponse) {};
    rpc Update(BusinessNodeUpdateModel) returns (BusinessNodeUpdateResponse) {};
    rpc Delete(BusinessNodeDeleteModel) returns (BusinessNodeDeleteResponse) {};

}